# shadowbox

./: .cache  .dockerignore  .env.example  .gitignore  .golangci.yml  .goreleaser.yaml  =2.23.0  CHANGELOG.md  DOCKER.md  DOCKER_SUMMARY.md  Dockerfile  Makefile  README.md  RELEASE_GUIDE.md  RELEASE_NOTES_v1.0.2.md  SECURITY.md  SPOTIFY_METADATA.md  build.py  check_lyrics.py  cover_art.py  docker-compose.yml  docker-deps-check.sh  docker-run.bat  docker-run.sh  downloader.py  enable_verbose.py  example_batch_file.txt  go.mod  go.sum  install.bat  install.sh  lsfoobar.bat  lsfoobar.py  lsfoobar.sh  main.py  pyproject.toml  release.py  requirements.txt  run.bat  run.sh  (+17 more)
.github/: CODEOWNERS  dependabot.yml
core/: .shadowbox_config  lsfoobar.py  main.py  shbox.py  terminal_ui.py
docs/: DEPENDENCY_AUDIT.md  INSTALL_FROM_SOURCE.md  INSTALL_WINDOWS.md  PACKAGE_VERIFICATION_SUMMARY.md  RELEASE_GUIDE.md  RELEASING.md  SECURITY_OVERVIEW.md  YOUTUBE_DOWNLOAD_ISSUES.md  packagetransformation.md  release.sh
exec_bin/: enhance_files.bat  enhance_files.py  enhance_files.sh  lsfoobar.bat  lsfoobar.sh  run.bat  run.sh  shbox.bat  shbox.sh  spotify_tag.bat  spotify_tag.sh
meta_ops/: __init__.py  cover_art.py  downloader.py  lyrics.py  metadata.py  settings.py  spotify_metadata.py
scripts/: extract-release-notes.sh  install.ps1  release.sh
setup/: install.bat  install.sh  organize.bat  organize.sh  requirements.txt  setup.py  setup_genius.bat  setup_genius.sh  setup_spotify.bat  setup_spotify.sh  test_genius.sh  test_spotify.bat  test_spotify.sh  update_ytdlp.bat  update_ytdlp.py  (+1 more)
(+159 files in other folders)
